--- a/Pipfile
+++ b/Pipfile
@@ -10,12 +10,13 @@ pytest-cov = "*"
 pytest-mock = "*"
 
 [packages]
-pyyaml = ">=5.4"
-configargparse = "*"
-gitpython = "*"
-semver = "*"
-validators = "*"
+#pyyaml = ">=5.4"
+#configargparse = "*"
+#gitpython = "*"
+#semver = "*"
+#validators = "*"
 pytest-helm-charts = ">=0.3.1"
+step-exec-lib = ">=0.1.0"
 
 [requires]
 python_version = "3.8"
