--- a/examples/apps/hello-world-app/.ats/main.yaml
+++ b/examples/apps/hello-world-app/.ats/main.yaml
@@ -1,5 +1,5 @@
 smoke-tests-cluster-type: external
 functional-tests-cluster-type: external
-external-cluster-kubeconfig-path: /tmp/kube.config
+external-cluster-kubeconfig-path: ./kube.config
 external-cluster-type: kind
 external-cluster-version: 1.19
