--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,5 +13,8 @@
   "ignorePaths": [
     ".github/workflows/zz_generated.*",
     ".github/workflows/codeql-analysis.yml"
+  ],
+  "ignoreDeps": [
+    "architect"
   ]
 }
