--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,12 @@ repos:
         #    args: ["--ignore=D10,D21,D202"]
         #
 
+    # accept proper type annotations only
+    -   repo: https://github.com/pre-commit/pygrep-hooks
+        rev: v1.9.0  # Use the ref you want to point at
+        hooks:
+            -   id: python-use-type-annotations
+            -   id: python-check-blanket-noqa
     # bandit
     -   repo: https://github.com/PyCQA/bandit
         rev: '1.7.0'
@@ -32,6 +38,7 @@ repos:
         rev: v0.812
         hooks:
             -   id: mypy
+                args: [ "--disallow-untyped-defs", "--disallow-incomplete-defs" ]
 
     -   repo: https://github.com/pycqa/flake8
         rev: '3.9.2'  # pick a git hash / tag to point to
@@ -44,6 +51,17 @@ repos:
         hooks:
             -   id: shell-lint
                 args: [ --format=json ]
+
+    # python project description files
+    -   repo: https://github.com/regebro/pyroma
+        rev: "3.2"
+        hooks:
+            -   id: pyroma
+
+    - repo: https://github.com/igorshubovych/markdownlint-cli
+      rev: v0.28.1
+      hooks:
+          -     id: markdownlint
 
     -   repo: https://github.com/pre-commit/pre-commit-hooks
         rev: v4.0.1
