--- a/tests/assets/test_index.yaml
+++ b/tests/assets/test_index.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 entries:
   hello-world-app:
   - annotations:
-      application.giantswarm.io/metadata: http://localhost/hello-world-app-0.2.3-90e2f60e6810ddf35968221c193340984236fe2a.tgz-meta/main.yaml
+      application.giantswarm.io/metadata: http://localhost/hello-world-app-0.2.4.tgz-meta/main.yaml
       application.giantswarm.io/readme: https://raw.githubusercontent.com/giantswarm/hello-world-app/v0.0.1/README.md
-      application.giantswarm.io/values-schema: http://localhost/hello-world-app-0.2.3-90e2f60e6810ddf35968221c193340984236fe2a.tgz-meta/values.schema.json
+      application.giantswarm.io/values-schema: http://localhost/hello-world-app-0.2.4.tgz-meta/values.schema.json
     apiVersion: v1
     appVersion: v0.0.1
     created: "2021-09-01T14:56:41.519303502Z"
@@ -17,8 +17,8 @@ entries:
     sources:
     - https://github.com/giantswarm/hello-world-app
     urls:
-    - charts/hello-world-app-0.2.4-1.tgz
-    version: 0.2.4-1
+    - charts/hello-world-app-0.2.4.tgz
+    version: 0.2.4
   - annotations:
       application.giantswarm.io/metadata: http://localhost/hello-world-app-0.2.3-90e2f60e6810ddf35968221c193340984236fe2a.tgz-meta/main.yaml
       application.giantswarm.io/readme: https://raw.githubusercontent.com/giantswarm/hello-world-app/v0.0.1/README.md
