--- a/examples/apps/hello-world-go/.ats/main.yaml
+++ b/examples/apps/hello-world-go/.ats/main.yaml
@@ -3,3 +3,4 @@ functional-tests-cluster-type: external
 external-cluster-kubeconfig-path: ./kube.config
 external-cluster-type: kind
 external-cluster-version: 1.19
+test-executor: gotest
