--- a/examples/apps/hello-world-app/.ats/main.yaml
+++ b/examples/apps/hello-world-app/.ats/main.yaml
@@ -1,5 +1,7 @@
 smoke-tests-cluster-type: external
 functional-tests-cluster-type: external
+upgrade-tests-cluster-type: external
+upgrade-tests-app-file: examples/apps/hello-world-app/hello-world-app-0.2.4-1.tgz
 external-cluster-kubeconfig-path: ./kube.config
 external-cluster-type: kind
 external-cluster-version: 1.19
