--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ pytest-mock = "*"
 
 [packages]
 validators = ">=0.18.2"
-pytest-helm-charts = ">=0.7.0-beta.1"
+pytest-helm-charts = ">=0.7.0"
 step-exec-lib = ">=0.1.5"
 semver = "*"
 
