--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,61 +1,60 @@
 version: 2.1
 
 orbs:
-  architect: giantswarm/architect@4.35.6
-  codecov: codecov/codecov@3.3.0
+    architect: giantswarm/architect@4.35.6
+    codecov: codecov/codecov@3.3.0
 
 workflows:
-  test:
-    jobs:
-      - run-tests:
-          name: run-tests
-          filters:
-                        # Needed to trigger job also on git tag.
-            tags:
-              only: /^v.*/
+    test:
+        jobs:
+            - run-tests:
+                  name: run-tests
+                  filters:
+                      # Needed to trigger job also on git tag.
+                      tags:
+                          only: /^v.*/
 
-      - architect/push-to-registries:
-          context: architect
-          name: push-to-registries
-          requires:
-            - run-tests
-          filters:
-                        # Needed to trigger job also on git tag.
-            tags:
-              only: /^v.*/
+            - architect/push-to-registries:
+                  context: architect
+                  name: push-to-registries
+                  requires:
+                      - run-tests
+                  filters:
+                      # Needed to trigger job also on git tag.
+                      tags:
+                          only: /^v.*/
 
-      - publish-github-release:
-          name: publish-github-release-for-dats
-          requires:
-            - push-to-registries
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
-
+            - publish-github-release:
+                  name: publish-github-release-for-dats
+                  requires:
+                      - push-to-registries
+                  filters:
+                      branches:
+                          ignore: /.*/
+                      tags:
+                          only: /^v.*/
 
 jobs:
-  run-tests:
-    machine:
-      image: ubuntu-2004:202010-01
-    steps:
-      - checkout
+    run-tests:
+        machine:
+            image: default
+        steps:
+            - checkout
 
-      - run:
-          name: Execute tests
-          command: |
-            make docker-test-ci
+            - run:
+                  name: Execute tests
+                  command: |
+                      make docker-test-ci
 
-      - codecov/upload:
-          file: .coverage/coverage.xml
+            - codecov/upload:
+                  file: .coverage/coverage.xml
 
-  publish-github-release:
-    docker:
-      - image: cibuilds/github:0.13
-    steps:
-      - checkout
-      - run:
-          name: "Publish Release on GitHub"
-          command: |
-            ghr -t ${ARCHITECT_GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${CIRCLE_TAG} ./dats.sh
+    publish-github-release:
+        docker:
+            - image: cibuilds/github:0.13
+        steps:
+            - checkout
+            - run:
+                  name: "Publish Release on GitHub"
+                  command: |
+                      ghr -t ${ARCHITECT_GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${CIRCLE_TAG} ./dats.sh
