disable explicit fiel for codecov

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
                   command: |
                       make docker-test-ci
 
-            - codecov/upload:
+            - codecov/upload
 
     publish-github-release:
         docker:
