--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,4 +1,6 @@
 MD013:
-  # Number of characters
-  line_length: 120
-  code_blocks: false
+    # Number of characters
+    line_length: 120
+    code_blocks: false
+MD007:
+    indent: 2
