--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ workflows:
             - architect/push-to-registries:
                   context: architect
                   name: push-to-registries
+                  registries-data: |-
+                      public gsoci.azurecr.io ACR_GSOCI_USERNAME ACR_GSOCI_PASSWORD false
                   requires:
                       - run-tests
                   filters:
