--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,61 +5,61 @@ orbs:
     codecov: codecov/codecov@5.4.3
 
 workflows:
-    test:
-        jobs:
-            - run-tests:
-                  name: run-tests
-                  filters:
+  test:
+    jobs:
+    - run-tests:
+        name: run-tests
+        filters:
                       # Needed to trigger job also on git tag.
-                      tags:
-                          only: /^v.*/
+          tags:
+            only: /^v.*/
 
-            - architect/push-to-registries:
-                  context: architect
-                  name: push-to-registries
-                  registries-data: |-
-                      public gsoci.azurecr.io ACR_GSOCI_USERNAME ACR_GSOCI_PASSWORD false
-                  requires:
-                      - run-tests
-                  filters:
+    - architect/push-to-registries:
+        context: architect
+        name: push-to-registries
+        registries-data: |-
+          public gsoci.azurecr.io ACR_GSOCI_USERNAME ACR_GSOCI_PASSWORD false
+        requires:
+        - run-tests
+        filters:
                       # Needed to trigger job also on git tag.
-                      tags:
-                          only: /^v.*/
+          tags:
+            only: /^v.*/
 
-                      branches:
-                          ignore:
-                              - main
-                              - master
-            - publish-github-release:
-                  name: publish-github-release-for-dats
-                  requires:
-                      - push-to-registries
-                  filters:
-                      branches:
-                          ignore: /.*/
-                      tags:
-                          only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
+    - publish-github-release:
+        name: publish-github-release-for-dats
+        requires:
+        - push-to-registries
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
 jobs:
-    run-tests:
-        machine:
-            image: default
-        steps:
-            - checkout
+  run-tests:
+    machine:
+      image: default
+    steps:
+    - checkout
 
-            - run:
-                  name: Execute tests
-                  command: |
-                      make docker-test-ci
+    - run:
+        name: Execute tests
+        command: |
+          make docker-test-ci
 
-            - codecov/upload
+    - codecov/upload
 
-    publish-github-release:
-        docker:
-            - image: cibuilds/github:0.13
-        steps:
-            - checkout
-            - run:
-                  name: Publish Release on GitHub
-                  command: |
-                      ghr -t ${TAYLORBOT_CIRCLECI_RELEASE_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${CIRCLE_TAG} ./dats.sh
+  publish-github-release:
+    docker:
+    - image: cibuilds/github:0.13
+    steps:
+    - checkout
+    - run:
+        name: Publish Release on GitHub
+        command: |
+          ghr -t ${ARCHITECT_GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${CIRCLE_TAG} ./dats.sh
